--- a/package.json
+++ b/package.json
@@ -104,12 +104,7 @@
     "verbose": false,
     "port": 3000,
     "browsers": [
-      "last 2 version",
-      "safari 5",
-      "ie 9",
-      "opera 12.1",
-      "ios 6",
-      "android 4"
+      "last 2 version"
     ],
     "prodURL": "http://apptmnt.tld",
     "shareImageURL": "http://apptmnt.tld/static/share.png",
@@ -132,7 +127,7 @@
   "aliasify": {
     "aliases": {
       "root": "./src/scripts",
-      "views": "./src/scripts/views"
+      "datepicker": "./src/scripts/datepicker"
     }
   }
 }
