--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "license": "MIT",
   "vendors": [],
   "napa": {},
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "aliasify": "^2.1.0",
     "autoprefixer": "^6.3.x",
@@ -77,7 +76,7 @@
   },
   "scripts": {
     "install": "napa",
-    "init": "npm i inquirer@1.0.3 chalk cli-spinner del babel-cli babel-preset-es2015 && babel-node ./tasks/init/index.js",
+    "init": "npm i inquirer@1.0.3 chalk cli-spinner del babel-cli babel-preset-es2015 && babel-node ./apptmnt-generator/init/index.js",
     "dev": "NODE_ENV=development gulp --env dev",
     "prod": "NODE_ENV=production gulp --env prod"
   },
