--- a/package.json
+++ b/package.json
@@ -1,132 +1,46 @@
 {
   "name": "apptmnt",
-  "title": "apptmnt",
-  "version": "1.6.2",
-  "description": "Appointment creator ES6",
-  "author": "Daniel C. <https://twitter.com/bitclaw>",
-  "homepage": "https://github.com/bitclaw/apptmnt",
+  "version": "0.1.0",
+  "description": "Appointment creator",
+  "main": "lib/apptmnt.js",
+  "scripts": {
+    "build": "webpack --env build",
+    "dev": "webpack --progress --colors --watch --env dev",
+    "test": "mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
+    "test:watch": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.24.0",
+    "chai": "^3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "mocha": "^3.2.0",
+    "webpack": "^2.3.2",
+    "yargs": "^7.0.2"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitclaw/apptmnt"
-  },
-  "issues": {
-    "url": "https://github.com/bitclaw/apptmnt/issues"
+    "url": "https://github.com/bitclaw/apptmnt.git"
   },
   "keywords": [
-    "gulp",
-    "apptmnt",
+    "webpack",
     "es6",
-    "es2015"
+    "apptmnt"
   ],
+  "author": "Daniel C. <bitclaw@gmail.com>",
   "license": "MIT",
-  "vendors": [],
-  "napa": {},
-  "dependencies": {},
-  "devDependencies": {
-    "aliasify": "^2.1.0",
-    "autoprefixer": "^6.3.x",
-    "babel-core": "^6.7.x",
-    "babel-preset-es2015": "^6.6.x",
-    "babelify": "^7.3.0",
-    "brfs": "^1.4.3",
-    "browser-sync": "^2.12.x",
-    "browserify": "^13.0.x",
-    "chalk": "^1.1.x",
-    "css-mqpacker": "^5.0.x",
-    "csswring": "^5.0.x",
-    "del": "^2.2.x",
-    "eslint": "^3.6.1",
-    "eslint-config-airbnb": "^12.0.x",
-    "eslint-plugin-import": "^2.0.x",
-    "eslint-plugin-jsx-a11y": "^2.2.x",
-    "eslint-plugin-react": "^6.3.x",
-    "favicons": "^4.7.x",
-    "fontmin": "^0.9.x",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-cache": "^0.4.x",
-    "gulp-changed": "^1.3.x",
-    "gulp-filter": "^4.0.x",
-    "gulp-header": "^1.7.x",
-    "gulp-imagemin": "^3.0.x",
-    "gulp-mocha": "^3.0.x",
-    "gulp-newer": "^1.1.x",
-    "gulp-notify": "^2.2.x",
-    "gulp-postcss": "^6.1.x",
-    "gulp-preprocess": "^2.0.x",
-    "gulp-rename": "^1.2.x",
-    "gulp-sitemap": "^4.0.x",
-    "gulp-sourcemaps": "^1.6.x",
-    "gulp-uglify": "^2.0.x",
-    "gulp-util": "^3.0.x",
-    "gulp-w3cjs": "^1.2.x",
-    "gulp-watch": "^4.3.x",
-    "gulp.spritesmith": "^6.2.x",
-    "imagemin-pngquant": "^5.0.x",
-    "minimist": "^1.2.x",
-    "napa": "^2.3.x",
-    "postcss": "^5.2.4",
-    "pretty-hrtime": "^1.0.x",
-    "psi": "^2.0.x",
-    "stylelint": "^7.3.1",
-    "stylelint-config-suitcss": "^8.0.0",
-    "uglify-js": "^2.6.x",
-    "vinyl-buffer": "^1.0.x",
-    "vinyl-source-stream": "^1.1.x",
-    "watchify": "^3.7.x"
+  "bugs": {
+    "url": "https://github.com/bitclaw/apptmnt/issues"
   },
-  "scripts": {
-    "install": "napa",
-    "init": "npm i inquirer@1.0.3 chalk cli-spinner del babel-cli babel-preset-es2015 && babel-node ./apptmnt-generator/init/index.js",
-    "dev": "NODE_ENV=development gulp --env dev",
-    "prod": "NODE_ENV=production gulp --env prod"
-  },
-  "directories": {
-    "src": "./src",
-    "dist": "./dist",
-    "test": "./test"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "airbnb",
-    "globals": {
-      "ga": true
-    },
-    "rules": {
-      "comma-dangle": 0
-    }
-  },
-  "config": {
-    "verbose": false,
-    "port": 3000,
-    "browsers": [
-      "last 2 version"
-    ],
-    "prodURL": "http://apptmnt.tld",
-    "shareImageURL": "http://apptmnt.tld/static/share.png",
-    "twitterImage": "https://apptmnt.tld/static/twitter.png",
-    "twitterHandle": "@bitclaw",
-    "analyticsUA": "UA-XXXXX-X",
-    "developerURL": "http://apptmnt.app"
-  },
-  "extensions": {
-    "scripts": "js",
-    "styles": "css"
-  },
-  "browserify": {
-    "transform": [
-      "aliasify",
-      "brfs",
-      "babelify"
-    ]
-  },
-  "aliasify": {
-    "aliases": {
-      "root": "./src/scripts",
-      "datepicker": "./src/scripts/datepicker"
-    }
-  }
+  "homepage": "https://github.com/bitclaw/apptmnt",
+  "dependencies": {}
 }
