--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Appointment creator",
   "main": "lib/apptmnt.js",
   "scripts": {
+    "start": "node node_modules/.bin/http-server src/ -a 127.0.0.1 -p 8080 -o",
     "build": "webpack --env build",
     "dev": "webpack --progress --colors --watch --env dev",
     "test": "mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
@@ -23,6 +24,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "http-server": "^0.9.0",
     "mocha": "^3.2.0",
     "webpack": "^2.3.2",
     "yargs": "^7.0.2"
