--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
@@ -43,5 +43,7 @@
     "url": "https://github.com/bitclaw/apptmnt/issues"
   },
   "homepage": "https://github.com/bitclaw/apptmnt",
-  "dependencies": {}
+  "dependencies": {
+    "babel-preset-latest": "^6.24.1"
+  }
 }
