--- a/.eslintrc
+++ b/.eslintrc
@@ -8,15 +8,31 @@
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
-    "max-len": [1, 120, 2, {"ignoreComments": true}],
-    "quote-props": [1, "consistent-as-needed"],
-    "no-cond-assign": [2, "except-parens"],
-    "radix": 0,
-    "space-infix-ops": 0,
-    "no-unused-vars": [1, {"vars": "local", "args": "none"}],
-    "default-case": 0,
-    "no-else-return": 0,
-    "no-param-reassign": 0,
-    "quotes": 0
+    // indentation
+    "indent": [ 2, 4 ],
+
+    // spacing
+    "space-in-parens": [ 2, "always" ],
+    "template-curly-spacing": [ 2, "always" ],
+    "array-bracket-spacing": [ 2, "always" ],
+    "object-curly-spacing": [ 2, "always" ],
+    "computed-property-spacing": [ 2, "always" ],
+    "no-multiple-empty-lines": [ 2, { "max": 1, "maxEOF": 0, "maxBOF": 0 } ],
+
+    // strings
+    "quotes": [ 2, "double", "avoid-escape" ],
+
+    // code arrangement matter
+    "no-use-before-define": [ 2, { "functions": false } ],
+
+    // make it meaningful
+    "prefer-const": 1,
+
+    // keep it simple
+    "complexity": [ 1, 5 ],
+    "globals": {
+      "HTMLElement": true,
+      "customElements": true
+    }
   }
 }
